zeit.cms changes
================

1.19.2 (unreleased)
-------------------

- Test-Hilfsfunktionen zeit.cms.testing set_site() und create_interaction()
  eingeführt.

1.19.1 (2009-04-29)
-------------------

- DragAndDrop aus Dateilisten und der Suche funktioniert wieder (fixes #5057).

1.19 (2009-04-23)
-----------------

- zeit.today in ein extra Paket verschoben.

- Hilfsfunktion zum korrekten "dragbar" machen von Boxen, die sich auf ein
  Content-Objekt beziehen.

1.18.2 (2009-04-21)
-------------------

- Lightbox verwendet keine DIVs mit id mehr. Dies ermöglicht mehrere Lightboxen
  auf der selben Seite.

1.18.1 (2009-04-17)
-------------------

- UUIDs leben jetzt in ``{http://namespaces.zeit.de/CMS/document}uuid`` und 
  haben das Format ``{urn:uuid:3acb7948-9c83-439b-90ce-98426541ca80}``.

1.18 (2009-04-16)
----------------

- Beim öffnen des CMS wird den aktuellen Online-Arbeitsordner weitergeleitet
  (fixes #4995).

- UUIDs aben jetzt »ZEDE-« vorangestellt.


1.17.1 (2009-04-15)
-------------------

- LightboxForm kann neu geladen werden.

1.17 (2009-04-15)
-----------------

- Adapter von UniqueId auf ICMSContent hinzugefügt (fixes #4979).

- Es wird eine eindeutige ID als WebDAV-Property
  ``{http://namespaces.zeit.de/CMS/workflow}id`` geschrieben (fixes #4966).

1.16.5 (2009-04-07)
-------------------

- Drag-Panes refaktoriert, so dass sie schon vor dem Laden der vollständigen
  Pane die UniqueId des gezogenen Objektes kennen. Das erlaubt vor allem
  einfacheres Testen, stabilisiert aber auch das DragAndDrop für Benutzer.

1.16.4 (2009-04-06)
-------------------

- Event-Handler des Lightboxforms deregistrieren, wenn Lightbox geschlossen
  wird.

1.16.3 (2009-04-01)
-------------------

- Korrektes Verwenden der Zeitzone, so dass bei Sommerzeit auch Sommerzeit
  angezeigt wird.

1.16.2 (2009-03-31)
-------------------

- Lightbox flexibilisiert.
  

1.16.1 (2009-03-23)
-------------------

Technische Änderungen
~~~~~~~~~~~~~~~~~~~~~
